--- a/Views/Shared/_AdminMenuPartial.cshtml
+++ b/Views/Shared/_AdminMenuPartial.cshtml
@@ -1,4 +1,14 @@
-﻿ <li class="nav-item dropdown show">
+﻿@using Microsoft.AspNetCore
+@using Microsoft.AspNetCore.Identity
+@using School.Data
+
+
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
+@if(SignInManager.IsSignedIn(User) && await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result,"admin" ))
+{
+     <li class="nav-item dropdown show">
         <a class="dropdown-toggle nav-link text-dark" href="#" data-toggle="dropdown">Admin</a>
         <div class="dropdown-menu">
             <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index"><i class="fas fa-box mr-2"></i>Categories</a>
@@ -7,3 +17,4 @@
             <a class="dropdown-item" asp-area="Admin" asp-controller="MediaType" asp-action="Index"><i class="fas fa-file-video mr-2"></i>Media Types</a>
         </div>
 </li>
+}
