--- a/Areas/Admin/Views/Category/Index.cshtml
+++ b/Areas/Admin/Views/Category/Index.cshtml
@@ -37,7 +37,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.ThumbnailImagePath)
             </td>
-            <td>
+            <td> <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>|
                 @*<partial name="_RUDButtonsPartial" model="@item.Id">*@
                 <a asp-controller="CategoryItem" asp-action="Index" asp-route-categoryId="@item.Id" class="btn btn-outline-secondary btn-sm">Update Items</a>
             </td>
