--- a/Views/Shared/_AdminMenuPartial.cshtml
+++ b/Views/Shared/_AdminMenuPartial.cshtml
@@ -1,14 +1,12 @@
-﻿@using Microsoft.AspNetCore
-@using Microsoft.AspNetCore.Identity
+﻿@using Microsoft.AspNetCore.Identity
 @using School.Data
 
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
-
-@if(SignInManager.IsSignedIn(User) && await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result,"admin" ))
+@if(SignInManager.IsSignedIn(User) && await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "admin"))
 {
-     <li class="nav-item dropdown show">
+    <li class="nav-item dropdown show">
         <a class="dropdown-toggle nav-link text-dark" href="#" data-toggle="dropdown">Admin</a>
         <div class="dropdown-menu">
             <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index"><i class="fas fa-box mr-2"></i>Categories</a>
@@ -16,5 +14,19 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" asp-area="Admin" asp-controller="MediaType" asp-action="Index"><i class="fas fa-file-video mr-2"></i>Media Types</a>
         </div>
-</li>
+    </li>
 }
+else if (!SignInManager.IsSignedIn(User))
+{
+    
+    <li class="nav-item">
+        <a class="nav-link text-dark" href="#Courses"><i class="fas fa-laptop-code mr-1 text-info"></i>Courses</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link text-dark" href="#ContactUs"><i class="fas fa-phone-alt mr-1 text-info"></i>Contact Us</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link text-dark" href="#AboutUs"><i class="fas fa-chalkboard-teacher mr-1 text-info"></i>About Us</a>
+    </li>
+}
+
