finalise login and logout functions

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,3 +10,8 @@
 <div class="modal fade" id="UserLoginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <partial name="_UserLoginPartial" >
 </div>
+
+@section Scripts{
+    <script src="~/js/UserLogin.js"></script>
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
